@@ -12,6 +12,57 @@ if($_SESSION['phpSQLiteAdmin_currentdb'] == '') {
 	$_SESSION['phpSQLiteAdmin_currentdb'] = $_POST['sessionvalue'];
 }
 
+// Embedded Images
+/*
+Embed images using this function:
+function encode_img($img)
+{
+	$fd = fopen ($img, 'rb');
+	$size=filesize ($img);
+	$cont = fread ($fd, $size);
+	fclose ($fd);
+	$encimg = base64_encode($cont);
+	return $encimg;
+}
+*/
+if (isset($_GET['imgid'])) {
+	switch ($_GET['imgid']) {
+		case "database.png":
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAAFVJREFUKFNj/P//PwN+AFQBBCcO9iyb64+MgCIQKQa49LVz2f//J0MQkA1UDVEEUgHkIEsjKyJaxcGdtWjGQGwBiqOYgeZSiCKoCmqYAQkMfL7FH2IAUp7xCV2zSGMAAAAASUVORK5CYII=";
+			break;
+		case "edit.png":
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAAGxJREFUKFN1kMENwCAIRdnVY5dwFBbosWv0wKHr0K9YikSJiSbvRT6QbqoSGRlX0homMmlhVFQ3TMoGqGp57gMMR0Qmw/F1FryBJ2OJ/xw7PIyOFb3j5z5dy2EGM3vvOPww2oRftLSb9cai9ALjByf/vas8pQAAAABJRU5ErkJggg==";
+			break;
+		case "delete.png":
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAAFhJREFUKFOVUEEOwDAIcu/0x/5gr7E12hVM02SeFAiij7vLvabiFXHV2VCpBm4mgeaAog8pRRMBHRm28yLKzywpUKDTon954O5DDobourylRavs9I/+LJoHDOj+ebMh9FoAAAAASUVORK5CYII=";
+			break;
+		case "export.png":
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAAElJREFUKFNj+I8KGhoa0EQYkPlAaQhAFkSogEujKUIxA818CJcBTSsmF6TiAG4AlCXODKzWQwShZgBZEHuAjKVIAEUFLmOIcgcANi4S5K6eGuUAAAAASUVORK5CYII=";
+			break;
+		case "query.png":
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAAFBJREFUKFNj/P//PwN+AFRx4MCBBmwAKA7SD8RAWSCJCSDiIBVwM9YjAaA0wgyIbjST4FyQGUSpwGUA1B14rED4BdmNQDbc76T7Fi3YIL4FANr9DcnCLQhKAAAAAElFTkSuQmCC";
+			break;
+		case "row_insert.png";
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAAEVJREFUKFNj/P//PwMGaGxsdHBwgAoDVWCChoaGAzDAQJQKoA64OiAbDYDMgAhBFAEZz1ABQgVEET4VBMwg4A5q+Ba/GQA8fBNm+WP9jwAAAABJRU5ErkJggg==";
+			break;
+		case "table_browse.png";
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAADBJREFUKFNjbGhoYMAPgCoO4AYg/UCMH4BU/McNoGYAFSyFATQ2QgUuUwaZGfjDAwABxvgJEsmisgAAAABJRU5ErkJggg==";
+			break;
+		case "table_drop.png";
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAAE5JREFUKFNjbGhoYMAPgCoO4AYg/UCMH4BU/McNoGaAFDAw/EdWCmQDRf4DxcC2gFRAhCDq4AwUFRCLINJIhpFkBqY7wCYhmYHDO0SFBwAgBuY3U4A6ewAAAABJRU5ErkJggg==";
+			break;
+		case "table_empty.png";
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAAE5JREFUKFNjbGhoYMAPgCr+4wYg/XAV169fB7IhAMiG6EJRgaYUoghFBdwquEk4zYBIoNuCrA/Z3QhbIM5EdiAWlxL2C9ZAgdoCdwRWBgCNfACU8GKOGgAAAABJRU5ErkJggg==";
+			break;
+		case "table_structure.png";
+			$imgcode = "iVBORw0KGgoAAAANSUhEUgAAAAsAAAALCAIAAAAmzuBxAAAABGdBTUEAALGPC/xhBQAAACtJREFUKFNjbGhoYMAPgCr+4wYg/RAVB8AAyFiKBIBchApcpgxDM4BewgMAWDAIViqqPeEAAAAASUVORK5CYII=";
+			break;
+	}
+	
+	header('Content-type: image/png');
+    echo base64_decode($imgcode);
+	exit();
+}
 
 function check_db() {
 	global $current_db;
@@ -59,27 +110,27 @@ echo<<<EOT
 <div id="currentdb">Database: {$_SESSION['phpSQLiteAdmin_currentdb']}</div>
 <p class="sqliteversion">SQLite version: $sqliteversion</p>
 <br />
-<a href="mainframe.php" target="mainframe"><img src="images/database.png" alt="" /> Database Info</a> |
-<a href="table_structure.php?object=$current_table" target="mainframe"><img src="images/table_structure.png" alt="" /> Structure</a> |
-<a href="table_browse.php?object=$current_table" target="mainframe"><img src="images/table_browse.png" alt="" /> Browse</a> |
-<a href="query.php?object=$current_table" target="mainframe"><img src="images/query.png" alt="" /> Query</a> |
-<a href="row_edit.php?object=$current_table" target="mainframe"><img src="images/row_insert.png" alt=\"\" /> Insert</a> |
-<a href="export.php?object=$current_table" target="mainframe"><img src="images/export.png" alt=\"\" /> Export</a> |
-<a href="dbaction.php?action=empty_table&amp;object=$current_table" target="_top" onclick="return confirm_empty_table();"><img src="images/table_empty.png" alt=\"\" /> Empty</a> |
-<a href="dbaction.php?action=drop_table&amp;object=$current_table" target="_top" onclick="return confirm_drop_table();"><img src="images/table_drop.png" alt=\"\" /> Drop</a>
+<a href="mainframe.php" target="mainframe"><img src="include.php?imgid=database.png" alt="" /> Database Info</a> |
+<a href="table_structure.php?object=$current_table" target="mainframe"><img src="include.php?imgid=table_structure.png" alt="" /> Structure</a> |
+<a href="table_browse.php?object=$current_table" target="mainframe"><img src="include.php?imgid=table_browse.png" alt="" /> Browse</a> |
+<a href="query.php?object=$current_table" target="mainframe"><img src="include.php?imgid=query.png" alt="" /> Query</a> |
+<a href="row_edit.php?object=$current_table" target="mainframe"><img src="include.php?imgid=row_insert.png" alt=\"\" /> Insert</a> |
+<a href="export.php?object=$current_table" target="mainframe"><img src="include.php?imgid=export.png" alt=\"\" /> Export</a> |
+<a href="dbaction.php?action=empty_table&amp;object=$current_table" target="_top" onclick="return confirm_empty_table();"><img src="include.php?imgid=table_empty.png" alt=\"\" /> Empty</a> |
+<a href="dbaction.php?action=drop_table&amp;object=$current_table" target="_top" onclick="return confirm_drop_table();"><img src="include.php?imgid=table_drop.png" alt=\"\" /> Drop</a>
 EOT;
 }
 
 
 function print_table_action_links($current_table) {
 echo<<<EOT
-<a href="table_structure.php?object=$current_table" target="mainframe"><img src="images/table_structure.png" alt="" /> Structure</a> |
-<a href="table_browse.php?object=$current_table" target="mainframe"><img src="images/table_browse.png" alt="" /> Browse</a> |
-<a href="query.php?object=$current_table" target="mainframe"><img src="images/query.png" alt="" /> Query</a> |
-<a href="row_edit.php?object=$current_table" target="mainframe"><img src="images/row_insert.png" alt=\"\" /> Insert</a> |
-<a href="export.php?object=$current_table" target="mainframe"><img src="images/export.png" alt=\"\" /> Export</a> |
-<a href="dbaction.php?action=empty_table&amp;object=$current_table" target="_top" onclick="return confirm_empty_table();"><img src="images/table_empty.png" alt="" /> Empty</a> |
-<a href="dbaction.php?action=drop_table&amp;object=$current_table" target="_top" onclick="return confirm_drop_table();"><img src="images/table_drop.png" alt="" /> Drop</a>
+<a href="table_structure.php?object=$current_table" target="mainframe"><img src="include.php?imgid=table_structure.png" alt="" /> Structure</a> |
+<a href="table_browse.php?object=$current_table" target="mainframe"><img src="include.php?imgid=table_browse.png" alt="" /> Browse</a> |
+<a href="query.php?object=$current_table" target="mainframe"><img src="include.php?imgid=query.png" alt="" /> Query</a> |
+<a href="row_edit.php?object=$current_table" target="mainframe"><img src="include.php?imgid=row_insert.png" alt=\"\" /> Insert</a> |
+<a href="export.php?object=$current_table" target="mainframe"><img src="include.php?imgid=export.png" alt=\"\" /> Export</a> |
+<a href="dbaction.php?action=empty_table&amp;object=$current_table" target="_top" onclick="return confirm_empty_table();"><img src="include.php?imgid=table_empty.png" alt="" /> Empty</a> |
+<a href="dbaction.php?action=drop_table&amp;object=$current_table" target="_top" onclick="return confirm_drop_table();"><img src="include.php?imgid=table_drop.png" alt="" /> Drop</a>
 
 EOT;
 }
